<resources>
    <string name="app_name">Spaces</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="log_out">Log out  :( </string>
    <string name="search">Search</string>

    <string name="username">Barbara Snyder</string>
    <string name="case_ID">babs</string>
    <string name="case_email">babs@case.edu</string>

    <string name="outlets_toggle_off">Outlets</string>
    <string name="outlets_toggle_on">Outlets    (Remove) </string>
    <string name="whiteboards_toggle_off">Whiteboards</string>
    <string name="whiteboards_toggle_on">Whiteboards    (Remove) </string>
    <string name="computers_toggle_off">Computers</string>
    <string name="computers_toggle_on">Computers    (Remove) </string>

    <string name="add_space_title">Add a new study space:</string>
    <string name="add_space_name_hint">"Name (e.g. \"Sears Lobby\")</string>
    <string name="add_space_image_text">Pictures Added:</string>
    <string name="add_space_imagecount"> 0</string>

    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_name">name</string>
    <string name="add_friend_email_hint">"Enter your friend's email"</string>

    <string name="back_button_text">BACK</string>
    <string name="next_button_text">NEXT</string>
    <string name="select_review_location">Enter a location to review&#8230;</string>
    <string name="select_view_location">Enter the name of a location&#8230;</string>

    <string name="add_review_title">Location Name Here</string>
    <string name="review_location_name">this location</string>
    <string name="review_text_hint">Start typing your review&#8230;</string>
    <string name="review_ratings_hint">On a scale from 1 to 5\nthis study space is&#8230;</string>
    <string name="review_utilities_hint">This study space has&#8230;</string>
    <string name="add_review_imagecount"> 0</string>

</resources>
