<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share_spot"
            android:icon="@mipmap/ic_menu_share_spot"
            android:title="Share your spot" />
        <item
            android:id="@+id/nav_locate_friends"
            android:icon="@mipmap/ic_menu_locate_friends"
            android:title="Locate friends nearby" />
        <item
            android:id="@+id/nav_add_friends"
            android:icon="@mipmap/ic_menu_add_friends"
            android:title="Add friends" />
    </group>

    <item
        android:id="@+id/filters"
        android:title="Filter Results">
        <menu>
            <item
                android:id="@+id/nav_outlets"
                android:icon="@mipmap/ic_menu_outlets"
                android:checkable="true"
                android:checked="false"
                android:title="@string/outlets_toggle_off" />
            <item
                android:id="@+id/nav_whiteboards"
                android:icon="@mipmap/ic_menu_whiteboards"
                android:checkable="true"
                android:checked="false"
                android:title="@string/whiteboards_toggle_off" />
            <item
                android:id="@+id/nav_computers"
                android:icon="@drawable/ic_menu_computers"
                android:checkable="true"
                android:checked="false"
                android:title="@string/computers_toggle_off" />
        </menu>
    </item>

</menu>
