<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_space_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/add_space_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_space_title"
            android:textSize="12pt"
            />
        <EditText
            android:id="@+id/add_space_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/add_space_name_hint"
            android:inputType="textCapWords">
        </EditText>
        <ImageButton
            android:id="@+id/add_space_add_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_add_space_add_photos"
            android:background="@color/backgroundDefault" />
        <TextView
            android:id="@+id/add_space_imagecount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_space_imagecount"
            />
        <Button
            android:id="@+id/add_space_submit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="80dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/pureWhite"
            android:text="Submit"
            />

    </LinearLayout>
</ScrollView>
